ibm/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pmomax-ibm
  labels:
    app.kubernetes.io/name: pmomax
