ibm/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pmomax
  labels:
    app.kubernetes.io/name: pmomax
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pmomax
  ports:
    - name: http
      port: 80
      targetPort: 8080
