ibm/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmomax
  labels:
    app.kubernetes.io/name: pmomax
spec:
  ingressClassName: nginx
  rules:
    - host: pmomax.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pmomax
                port:
                  number: 80
